# rusty-keys

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml  build.sh  keymap.orig.toml  keymap.toml  keys.txt  notes.txt  out2.txt  win.sh
.ci/: Jenkinsfile  build.sh
ci/: before_deploy.ps1  before_deploy.sh  script.sh
src/: error.rs  keymapper.rs  lib.rs  main.rs
src/device/: builder.rs  device.rs  input_device.rs  mod.rs
src/linux/: mod.rs
src/linux/device/: builder.rs  codes.rs  device.rs  input_device.rs  mod.rs
src/macos/: codes.rs  mod.rs
src/windows/: codes.rs  mod.rs
systemd/: rusty-keys.service
