[package]
name    = "rusty-keys"
version = "0.0.3"

authors = ["moparisthebest <admin@moparisthebest.com>"]
license = "AGPL-3.0"

description = "Linux keyboard mapper"
repository  = "https://code.moparisthebest.com/moparisthebest/rusty-keys"
keywords    = ["linux", "input", "keyboard", "keymapper"]

edition = "2018"

include = [
    "src/**",
    "Cargo.toml",
    "Cargo.lock",
    "keymap.toml",
    "LICENSE.md",
    "README.md",
]

[dependencies]
getopts = "0.2.21"
toml = "0.5.3"
serde = { version = "1.0.101", features = ["derive"] }

#[target.'cfg(target_os="macos")'.dependencies]
core-graphics = "0.17"
core-foundation-sys = "0.6.2"
#rustkit = "0.0.1"
lazy_static = "1.4.0"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "wincon"] }
lazy_static = "1.4.0"

[target.'cfg(target_os="linux")'.dependencies]
libc = "0.2.62"
nix = "0.15.0"
uinput-sys = "0.1.7"
inotify = { version = "0.7.0", default-features = false, features = [] }
