[package]
name    = "rusty-keys"
version = "0.0.3"

authors = ["moparisthebest <admin@moparisthebest.com>"]
license = "AGPL-3.0"

description = "Linux keyboard mapper"
repository  = "https://code.moparisthebest.com/moparisthebest/rusty-keys"
keywords    = ["linux", "input", "keyboard", "keymapper"]

edition = "2018"

include = [
    "src/**",
    "Cargo.toml",
    "Cargo.lock",
    "keymap.toml",
    "LICENSE.md",
    "README.md",
]

[dependencies]
getopts = "0.2.21"
toml = { version = "0.5.8", optional = true }
serde = { version = "1.0.130", features = ["derive"], optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "wincon"] }
lazy_static = "1.4.0"

[target.'cfg(target_os="linux")'.dependencies]
libc = "0.2.102"
nix = "0.22.1"
epoll = { version = "4.3.1", optional = true }
inotify = { version = "0.9.3", default-features = false, features = [], optional = true }

[features]
default = ["epoll_inotify", "toml_serde"]
toml_serde = ["toml", "serde"]
epoll_inotify = ["epoll", "inotify"]
